--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -9,13 +9,16 @@
 <form th:method="PATCH" th:action="@{/{id}(id=${editUser.getId()})}" th:object="${editUser}">
 
     <br>
+    <label for="id">ID пользователя</label>
+    <input type="text" readonly th:field="*{id}" id="id">
+    <br>
     <label for="name">Введите имя</label>
     <input type="text" th:field="*{firstName}" id="name">
     <br>
-    <label for="lastName">Введите имя</label>
+    <label for="lastName">Введите фамилию</label>
     <input type="text" th:field="*{lastName}" id="lastName">
     <br>
-    <label for="age">Введите имя</label>
+    <label for="age">Введите возраст</label>
     <input type="number" th:field="*{age}" id="age">
     <br>
     <label for="password">Введите пароль</label>
